@@ -507,7 +507,7 @@ $def_hopcount = 5;
 
 
 %nodehops = 
-
+(
  GB7ADX => {            11 => 8,
                         12 => 8,
                         16 => 8,
@@ -531,7 +531,7 @@ $def_hopcount = 5;
                         19 => 8,
                         21 => 8,
                    },
-};
+);
 </PRE>
 </CODE></BLOCKQUOTE>
 </P>
