@@ -425,7 +425,7 @@ commmands:-</P>
 <H2><A NAME="ss11.16">11.16</A> <A HREF="adminmanual.html#toc11.16">clear/announce (8)</A>
 </H2>
 
-<P><CODE><B>clear/announce [input] &lt;callsign&gt; [0-9|all]</B> Clear an announce filter line</CODE></P>
+<P><CODE><B>clear/announce &lt;callsign&gt; [input] [0-9|all]</B> Clear an announce filter line</CODE></P>
 
 <P>A sysop can clear an input or normal output filter for a user or the
 node_default or user_default. </P>
@@ -433,7 +433,7 @@ node_default or user_default. </P>
 <H2><A NAME="ss11.17">11.17</A> <A HREF="adminmanual.html#toc11.17">clear/route (8)</A>
 </H2>
 
-<P><CODE><B>clear/route [input] ^lt;callsign&gt; [0-9|all]</B> Clear a route filter line</CODE></P>
+<P><CODE><B>clear/route &lt;callsign&gt; [input] [0-9|all]</B> Clear a route filter line</CODE></P>
 
 <P>This command allows you to clear (remove) a line in a route filter or to 
 remove the whole filter.</P>
@@ -486,7 +486,7 @@ remove the whole filter.</P>
 <H2><A NAME="ss11.19">11.19</A> <A HREF="adminmanual.html#toc11.19">clear/spots (extended for sysops) (8)</A>
 </H2>
 
-<P><CODE><B>clear/spots [input] &lt;callsign&gt; [0-9|all]</B> Clear a spot filter line</CODE></P>
+<P><CODE><B>clear/spots &lt;callsign&gt; [input] [0-9|all]</B> Clear a spot filter line</CODE></P>
 
 <P>A sysop can clear an input or normal output filter for a user or the
 node_default or user_default. </P>
@@ -503,7 +503,7 @@ remove the whole filter.</P>
 <H2><A NAME="ss11.21">11.21</A> <A HREF="adminmanual.html#toc11.21">clear/wcy (extended for sysops) (8)</A>
 </H2>
 
-<P><CODE><B>clear/wcy [input] &lt;callsign&gt; [0-9|all]</B> Clear a WCY filter line</CODE></P>
+<P><CODE><B>clear/wcy &lt;callsign&gt; [input] [0-9|all]</B> Clear a WCY filter line</CODE></P>
 
 <P>A sysop can clear an input or normal output filter for a user or the
 node_default or user_default. </P>
@@ -520,7 +520,7 @@ remove the whole filter.</P>
 <H2><A NAME="ss11.23">11.23</A> <A HREF="adminmanual.html#toc11.23">clear/wwv (extended for sysops) (8)</A>
 </H2>
 
-<P><CODE><B>clear/wwv [input] &lt;callsign&gt; [0-9|all]</B> Clear a WWV filter line</CODE></P>
+<P><CODE><B>clear/wwv &lt;callsign&gt; [input] [0-9|all]</B> Clear a WWV filter line</CODE></P>
 
 <P>A sysop can clear an input or normal output filter for a user or the
 node_default or user_default.</P>
