@@ -16,7 +16,7 @@ Contents
 <H1>The DXSpider Administration Manual v1.50</H1>
 
 <H2>Ian Maude, G0VGS, (g0vgs@gb7mbc.net), and
-Charlie Carroll, K1XX, (k1xx@ptcnh.net)</H2>January 2003 revision 0.2
+Charlie Carroll, K1XX, (k1xx@ptcnh.net)</H2>February 2003 revision 0.3
 <HR>
 <EM>A reference for SysOps of the DXSpider DXCluster program.</EM>
 <HR>
