@@ -41,13 +41,13 @@ perl distribution.</P>
 <P>
 <UL>
 <LI> 
-<A HREF="http://www.cpan.org/modules/by-module/Data/Data-Dumper-2.10.tar.gz">Data-Dumper-2.10.tar.gz</A></LI>
+<A HREF="http://www.cpan.org/modules/by-module/Data/Data-Dumper-2.10.tar.gz">Data-Dumper-2.101.tar.gz</A></LI>
 <LI> 
 <A HREF="http://www.cpan.org/modules/by-module/Date/TimeDate-1.10.tar.gz">TimeDate-1.10.tar.gz</A></LI>
 <LI> 
 <A HREF="http://www.cpan.org/modules/by-module/IO/IO-1.20.tar.gz">IO-1.20.tar.gz (for perl 5.00403 and lower)</A></LI>
 <LI> 
-<A HREF="http://www.cpan.org/modules/by-module/Net/Net-Telnet-3.02.tar.gz">Net-Telnet-3.02.tar.gz</A></LI>
+<A HREF="http://www.cpan.org/modules/by-module/Net/Net-Telnet-3.02.tar.gz">Net-Telnet-3.03.tar.gz</A></LI>
 <LI> 
 <A HREF="http://www.cpan.org/modules/by-module/Curses/Curses-1.06.tar.gz">Curses-1.06.tar.gz</A></LI>
 <LI> 
@@ -65,7 +65,7 @@ that's where you have put them.</P>
 <P>
 <PRE>
 # tar xvfz /usr/local/packages/Data-Dumper-2.10.tar.gz
-# cd Data-Dumper-2.10
+# cd Data-Dumper-2.101
 # perl Makefile.PL
 # make test
 # make install
@@ -85,7 +85,7 @@ that's where you have put them.</P>
 # make install UNINST=1
 # cd ..
 #
-# tar xvfz /usr/local/packages/Net-Telnet-3.02.tar.gz
+# tar xvfz /usr/local/packages/Net-Telnet-3.03.tar.gz
 # cd Net-Telnet-3.02
 # perl Makefile.PL
 # make test
