@@ -17,7 +17,7 @@ Contents
 
 <H2>Iain Philipps, G0RDI (g0rdi@77hz.com),
 Ian Maude, G0VGS, (g0vgs@gb7mbc.net) and Charlie
-Carroll, K1XX, (k1xx@ptcnh.net)</H2>September 2002 revision 0.4
+Carroll, K1XX, (k1xx@ptcnh.net)</H2>February 2003 revision 0.5
 <HR>
 <EM>A reference for SysOps of the DXSpider DXCluster program.</EM>
 <HR>
