@@ -8,7 +8,7 @@
 <author>Iain Philipps, G0RDI (g0rdi@77hz.com),
 Ian Maude, G0VGS, (g0vgs@gb7mbc.net) and Charlie
 Carroll, K1XX, (k1xx@ptcnh.net)</author>
-<date>September 2002 revision 0.4</date>
+<date>February 2003 revision 0.5</date>
 
 <abstract>
 A reference for SysOps of the DXSpider DXCluster program.
@@ -48,10 +48,10 @@ perl distribution.
 
 <P>
 <itemize>
-<item> <htmlurl url="http://www.cpan.org/modules/by-module/Data/Data-Dumper-2.10.tar.gz" name="Data-Dumper-2.10.tar.gz">
+<item> <htmlurl url="http://www.cpan.org/modules/by-module/Data/Data-Dumper-2.10.tar.gz" name="Data-Dumper-2.101.tar.gz">
 <item> <htmlurl url="http://www.cpan.org/modules/by-module/Date/TimeDate-1.10.tar.gz" name="TimeDate-1.10.tar.gz">
 <item> <htmlurl url="http://www.cpan.org/modules/by-module/IO/IO-1.20.tar.gz" name="IO-1.20.tar.gz (for perl 5.00403 and lower)">
-<item> <htmlurl url="http://www.cpan.org/modules/by-module/Net/Net-Telnet-3.02.tar.gz" name="Net-Telnet-3.02.tar.gz">
+<item> <htmlurl url="http://www.cpan.org/modules/by-module/Net/Net-Telnet-3.02.tar.gz" name="Net-Telnet-3.03.tar.gz">
 <item> <htmlurl url="http://www.cpan.org/modules/by-module/Curses/Curses-1.06.tar.gz" name="Curses-1.06.tar.gz">
 <item> <htmlurl url="http://www.cpan.org/modules/by-module/Time/Time-HiRes-01.20.tar.gz" name="Time-HiRes-01.20.tar.gz">
 <item> <htmlurl url="http://www.cpan.org/modules/by-module/Digest/Digest-SHA1-2.01.tar.gz" name="Digest-SHA1-2.01.tar.gz">
@@ -67,7 +67,7 @@ Log in as 'root', and make sure you're at '/root' before you continue. Here are 
 
 <verb>
 # tar xvfz /usr/local/packages/Data-Dumper-2.10.tar.gz
-# cd Data-Dumper-2.10
+# cd Data-Dumper-2.101
 # perl Makefile.PL
 # make test
 # make install
@@ -87,7 +87,7 @@ Log in as 'root', and make sure you're at '/root' before you continue. Here are 
 # make install UNINST=1
 # cd ..
 #
-# tar xvfz /usr/local/packages/Net-Telnet-3.02.tar.gz
+# tar xvfz /usr/local/packages/Net-Telnet-3.03.tar.gz
 # cd Net-Telnet-3.02
 # perl Makefile.PL
 # make test
